syntax = "proto3";

import "dashql/oauth.proto";
import "dashql/workbook.proto";

package dashql;

message AppEventData {
    oneof data {
        /// Workbook configuration
        Workbook workbook = 2;
        /// Provide the oauth redirect
        OAuthRedirectData oauth_redirect = 1;
    }
}
